--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/test
+jdbc.url=jdbc:postgresql://localhost:5432/postgres
 jdbc.username=postgres
 jdbc.password=postgres
 c3p0.maxPoolSize=30
